--- a/force-app/main/default/classes/AccountHelper.cls
+++ b/force-app/main/default/classes/AccountHelper.cls
@@ -1,11 +1,10 @@
-public class AccountHelper
+public with sharing class AccountHelper
 {
-
 @AuraEnabled(cacheable=true)
 public static List<Account> getAccountData()
 {
 return
-[Select id,Name,Industry,Rating from Account
+[Select Id,Name,Industry,Rating from Account
  with 
  USER_MODE];
 
