lds and create update delete wire adapters

--- a/force-app/main/default/classes/AccountHelper.cls
+++ b/force-app/main/default/classes/AccountHelper.cls
@@ -9,4 +9,10 @@ return
  USER_MODE];
 
 }
+@AuraEnabled(cacheable=true)
+public static List<Account> getParentAccounts()
+{
+
+return [Select Id,Name,Industry,SLA__c from Account where AnnualRevenue!=null with USER_MODE];    
+}
 }
