--- a/force-app/main/default/classes/AccountHelper.cls
+++ b/force-app/main/default/classes/AccountHelper.cls
@@ -14,4 +14,17 @@ public static List<Account> getParentAccounts()
 
 return [Select Id,Name,Industry,SLA__c from Account where AnnualRevenue!=null with USER_MODE];    
 }
+
+@AuraEnabled
+public static string updateTickerMethod(String recordId,String newTicker){
+    Account acc=new Account(Id=recordId,TickerSymbol=newTicker);
+    try{
+        update acc;
+        return 'Success';
+
+    }
+    catch(Exception ex){
+  return ex.getMessage();
+    }
+}
 }
